// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<ButtonWithStyles
  className="ui-shared__button css-cifbew "
  testId="Button"
  type="button"
>
  <div
    className="css-1vbmsgf"
  >
    Press me
  </div>
</ButtonWithStyles>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<ButtonWithStyles
  className="ui-shared__button css-1a50m4j "
  testId="Button"
  type="button"
>
  <div
    className="css-1vphhlq"
  >
    Press me
  </div>
</ButtonWithStyles>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<ButtonWithStyles
  className="ui-shared__button css-cifbew "
  testId="Button"
  type="button"
>
  <div
    className="css-1vbmsgf"
  >
    Press me
  </div>
</ButtonWithStyles>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<ButtonWithStyles
  className="ui-shared__button css-mk0dpu "
  testId="Button"
  type="button"
>
  <div
    className="css-nhaw1b"
  >
    Press me
  </div>
</ButtonWithStyles>
`;
